--- a/advanced.html
+++ b/advanced.html
@@ -4,7 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Arduino Guide - Advanced</title>
-<style>/* same styles */</style>
+<style>/* same styles */body { font-family: Arial, sans-serif; line-height: 1.6; margin:0; padding:0; background:#f9f9f9; color:#222; }
+header { position:sticky; top:0; background:#333; color:#fff; padding:10px; z-index:1000; }
+nav a { color:#fff; margin:0 10px; text-decoration:none; }
+.dark { background:#111; color:#ddd; }
+pre { background:#272822; color:#f8f8f2; padding:10px; border-radius:5px; overflow-x:auto; position:relative; }
+button.copy { position:absolute; top:5px; right:5px; padding:3px 6px; font-size:12px; }
+#progress { position:fixed; top:0; left:0; height:4px; background:#007bff; z-index:2000; }
+#topBtn { position:fixed; bottom:20px; right:20px; padding:10px; border:none; background:#007bff; color:#fff; border-radius:50%; display:none; cursor:pointer; }</style>
 </head>
 <body>
 <!-- navbar same -->
