--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ int main() {
     }
     return 0;
 }
-</xmp>
+ <script type='text/javascript' src='//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js'></script>
 
 </body>
 </html>
