--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
   <title>C++ Calculator Code</title>
   <meta name="monetag" content="ff53cfb16bb3973c9f24cf95c30e8585">
 </head>
 <body>
+
 <h1>Simple C++ Calculator</h1>
+
+<!-- Place the ad here -->
+<script type='text/javascript' src='//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js'></script>
 
 <xmp>
 #include <iostream>
@@ -35,9 +38,7 @@ int main() {
     }
     return 0;
 }
- 
+</xmp>
 
 </body>
 </html>
- <script type='text/javascript' src='//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js'></script>
-
