--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>C++ Calculator Code</title>
   <meta name="monetag" content="ff53cfb16bb3973c9f24cf95c30e8585">
+  <script type='text/javascript' src='//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js'></script>
 </head>
 <body>
 
