--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <script type='text/javascript' src='//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js'></script>
 </head>
 <body>
-
+<a href="https://www.revenuecpmgate.com/cnk0e4yz?key=e9dc1de73f4a548c28470a7ed26dd03e" target="_blank" 
+   style="display:block; width:300px; height:250px; background:#f4f4f4; 
+          border:2px solid #ccc; text-align:center; line-height:250px; 
+          font-family:Arial; font-size:16px; color:#333; margin:20px auto; text-decoration:none;">
+   Click Here to View Ad
+</a>
 <h1>AD</h1>
 
 </body>
