--- a/index.html
+++ b/index.html
@@ -4,16 +4,89 @@
   <meta charset="UTF-8">
   <title>C++ Calculator Code</title>
   <meta name="monetag" content="ff53cfb16bb3973c9f24cf95c30e8585">
-  <script type='text/javascript' src='//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js'></script>
+  <script type="text/javascript" src="//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js"></script>
+  
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      color: #333;
+    }
+
+    header {
+      background: linear-gradient(135deg, #4f46e5, #3b82f6);
+      color: white;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2rem;
+      letter-spacing: 1px;
+    }
+
+    .ad-container {
+      margin: 30px auto;
+      max-width: 320px;
+    }
+
+    .ad-box {
+      display: block;
+      width: 300px;
+      height: 250px;
+      background: #f4f4f4;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      text-align: center;
+      line-height: 250px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #333;
+      text-decoration: none;
+      margin: 0 auto;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+    }
+
+    .ad-box:hover {
+      background: #e0e7ff;
+      border-color: #4f46e5;
+      color: #111827;
+      transform: scale(1.05);
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 15px;
+      font-size: 14px;
+      color: #777;
+      background: #f3f4f6;
+      border-top: 1px solid #ddd;
+    }
+  </style>
 </head>
 <body>
-<a href="https://www.revenuecpmgate.com/cnk0e4yz?key=e9dc1de73f4a548c28470a7ed26dd03e" target="_blank" 
-   style="display:block; width:300px; height:250px; background:#f4f4f4; 
-          border:2px solid #ccc; text-align:center; line-height:250px; 
-          font-family:Arial; font-size:16px; color:#333; margin:20px auto; text-decoration:none;">
-   Click Here to View Ad
-</a>
-<h1>AD</h1>
+  
+  <header>
+    <h1>Advertisement Section</h1>
+  </header>
+
+  <div class="ad-container">
+    <!-- Ad link kept exactly the same -->
+    <a href="https://www.revenuecpmgate.com/cnk0e4yz?key=e9dc1de73f4a548c28470a7ed26dd03e" 
+       target="_blank" 
+       class="ad-box">
+       Click Here to View Ad
+    </a>
+  </div>
+
+  <footer>
+    &copy; 2025 | Ad Placement Example Page
+  </footer>
 
 </body>
 </html>
