--- a/index.html
+++ b/index.html
@@ -2,91 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>C++ Calculator Code</title>
-  <meta name="monetag" content="ff53cfb16bb3973c9f24cf95c30e8585">
-  <script type="text/javascript" src="//pl27533361.effectivecpmrate.com/75/b7/98/75b7981b4bfed60888196379f7e9f15a.js"></script>
-  
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9fafb;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      color: #333;
-    }
-
-    header {
-      background: linear-gradient(135deg, #4f46e5, #3b82f6);
-      color: white;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 2rem;
-      letter-spacing: 1px;
-    }
-
-    .ad-container {
-      margin: 30px auto;
-      max-width: 320px;
-    }
-
-    .ad-box {
-      display: block;
-      width: 300px;
-      height: 250px;
-      background: #f4f4f4;
-      border: 2px solid #ccc;
-      border-radius: 10px;
-      text-align: center;
-      line-height: 250px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #333;
-      text-decoration: none;
-      margin: 0 auto;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease;
-    }
-
-    .ad-box:hover {
-      background: #e0e7ff;
-      border-color: #4f46e5;
-      color: #111827;
-      transform: scale(1.05);
-    }
-
-    footer {
-      margin-top: 40px;
-      padding: 15px;
-      font-size: 14px;
-      color: #777;
-      background: #f3f4f6;
-      border-top: 1px solid #ddd;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Adsterra Test Page</title>
 </head>
 <body>
-  
-  <header>
-    <h1>Advertisement Section</h1>
-  </header>
+  <h1>Welcome to my website</h1>
+  <p>Here’s a banner ad below:</p>
 
-  <div class="ad-container">
-    <!-- Ad link kept exactly the same -->
-    <a href="https://www.revenuecpmgate.com/cnk0e4yz?key=e9dc1de73f4a548c28470a7ed26dd03e" 
-       target="_blank" 
-       class="ad-box">
-       Click Here to View Ad
-    </a>
-  </div>
+  <!-- Adsterra Banner -->
+  <script type='text/javascript' src='//pl27563222.revenuecpmgate.com/8f/b9/d0/8fb9d06c58eebe3cb62bf06a2139f875.js'></script>
 
-  <footer>
-    &copy; 2025 | Ad Placement Example Page
-  </footer>
-
+  <p>Some more content down here…</p>
 </body>
 </html>
