--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Adsterra Test Page</title>
+  <title>My GitHub Page</title>
+
+  <!-- Ad verification / tracking meta tag -->
+  <meta name="63fc5883bf76c21bbc768399576d0344010eaa40" content="63fc5883bf76c21bbc768399576d0344010eaa40" />
+
 </head>
 <body>
-  <h1>Welcome to my website</h1>
-  <p>Here’s a banner ad below:</p>
+  <h1>Welcome to my site</h1>
+  <p>Content goes here.</p>
 
-  <!-- Adsterra Banner -->
-  <script type='text/javascript' src='//pl27563222.revenuecpmgate.com/8f/b9/d0/8fb9d06c58eebe3cb62bf06a2139f875.js'></script>
-
-  <p>Some more content down here…</p>
+  <!-- Example Adsterra banner -->
+  <script type="text/javascript" src="https://pl27563222.revenuecpmgate.com/8f/b9/d0/8fb9d06c58eebe3cb62bf06a2139f875.js"></script>
 </body>
 </html>
