--- a/index.html
+++ b/index.html
@@ -3,17 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Page</title>
-
-  <!-- Ad verification / tracking meta tag -->
+  <title>My Cool Site</title>
+  
+  <!-- Ad verification / tracking meta -->
   <meta name="63fc5883bf76c21bbc768399576d0344010eaa40" content="63fc5883bf76c21bbc768399576d0344010eaa40" />
 
+  <!-- Google Fonts for modern look -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+  <style>
+    /* Reset & base styles */
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+      color: #333;
+    }
+
+    header {
+      background-color: #0d6efd;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      text-align: center;
+    }
+
+    .smartlink-card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      margin: 2rem 0;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .smartlink-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 30px rgba(0,0,0,0.15);
+    }
+
+    .smartlink-card a {
+      display: inline-block;
+      text-decoration: none;
+      background: #0d6efd;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: background 0.2s;
+    }
+
+    .smartlink-card a:hover {
+      background: #0b5ed7;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to my site</h1>
-  <p>Content goes here.</p>
 
-  <!-- Example Adsterra banner -->
-  <script type="text/javascript" src="https://pl27563222.revenuecpmgate.com/8f/b9/d0/8fb9d06c58eebe3cb62bf06a2139f875.js"></script>
+  <header>
+    <h1>Welcome to My Cool Site</h1>
+    <p>Click the Smart Link below to explore!</p>
+  </header>
+
+  <main>
+    <!-- Monetag Smart Link Card -->
+    <div class="smartlink-card">
+      <a href="https://otieu.com/4/9815875" target="_blank" rel="noopener noreferrer">
+        Click Here!
+      </a>
+    </div>
+  </main>
+
+  <footer>
+    &copy; 2025 My Cool Site. All rights reserved.
+  </footer>
+
 </body>
 </html>
