--- a/index.html
+++ b/index.html
@@ -8,26 +8,17 @@
   <h1>40 Ads Display</h1>
 
   <div id="ads-container"></div>
-
-  <script>
-    const adsContainer = document.getElementById("ads-container");
-
-    for (let i = 1; i <= 40; i++) {
-      const containerId = "container-d4340154bc73718f92bac0614d8b370f-" + i;
-
-      // create container
-      const adDiv = document.createElement("div");
-      adDiv.id = containerId;
-      adDiv.className = "ad";
-      adsContainer.appendChild(adDiv);
-
-      // create script tag for this ad
-      const script = document.createElement("script");
-      script.async = true;
-      script.setAttribute("data-cfasync", "false");
-      script.src = "//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js";
-      adsContainer.appendChild(script);
-    }
-  </script>
+<script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
+<div id="container-d4340154bc73718f92bac0614d8b370f"></div><
+                                                             script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
+<div id="container-d4340154bc73718f92bac0614d8b370f"></div><
+                                                             script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
+<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
+  <script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
+<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
+  <script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
+<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
+  <script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
+<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
 </body>
 </html>
