--- a/index.html
+++ b/index.html
@@ -6,19 +6,46 @@
 </head>
 <body>
   <h1>40 Ads Display</h1>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '67f0dad40c36a03406b8d577d4e872c5',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/67f0dad40c36a03406b8d577d4e872c5/invoke.js"></script>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '67f0dad40c36a03406b8d577d4e872c5',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/67f0dad40c36a03406b8d577d4e872c5/invoke.js"></script>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '67f0dad40c36a03406b8d577d4e872c5',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/67f0dad40c36a03406b8d577d4e872c5/invoke.js"></script>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '67f0dad40c36a03406b8d577d4e872c5',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/67f0dad40c36a03406b8d577d4e872c5/invoke.js"></script>
 
-  <div id="ads-container"></div>
-<script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
-<div id="container-d4340154bc73718f92bac0614d8b370f"></div><
-                                                             script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
-<div id="container-d4340154bc73718f92bac0614d8b370f"></div><
-                                                             script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
-<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
-  <script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
-<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
-  <script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
-<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
-  <script async="async" data-cfasync="false" src="//pl27673631.revenuecpmgate.com/d4340154bc73718f92bac0614d8b370f/invoke.js"></script>
-<div id="container-d4340154bc73718f92bac0614d8b370f"></div>
 </body>
 </html>
