--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
 </head>
 <body>
   <h1>40 Ads Display</h1>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '67f0dad40c36a03406b8d577d4e872c5',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
+<script async="async" data-cfasync="false" src="//pl27674162.revenuecpmgate.com/51795527679045767731bf787eb6883f/invoke.js"></script>
+<div id="container-51795527679045767731bf787eb6883f"></div>
 
 </body>
 </html>
