--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   <script async="async" data-cfasync="false" src="//pl27674162.revenuecpmgate.com/51795527679045767731bf787eb6883f/invoke.js"></script>
   <div id="container-51795527679045767731bf787eb6883f"></div>
 
-  <script async="async" data-cfasync="false" src="//pl27674162.revenuecpmgate.com/51795527679045767731bf787eb6883f/invoke.js"></script>
-<div id="container-51795527679045767731bf787eb6883f"></div>
-
-  <script async="async" data-cfasync="false" src="//pl27674162.revenuecpmgate.com/51795527679045767731bf787eb6883f/invoke.js"></script>
-<div id="container-51795527679045767731bf787eb6883f"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'e0f1838a638a63f20b9c1251602fbec3',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/e0f1838a638a63f20b9c1251602fbec3/invoke.js"></script>
   
 </body>
 </html>
